# dictate

./: .gitignore  README.md  config.json  dotool  pyproject.toml  script_error.txt  script_log.txt  voice.py  voice.sh
ydotoolBin/: ydotool  ydotoold
