[project]
name = "dictate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "loguru>=0.7.3",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pulsectl>=24.12.0",
    "pyaudio",
    "pydub>=0.25.1",
    "pymediainfo>=7.0.1",
    "python-dotenv>=1.1.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
